Fix loading of default configuration.
Fixes https://github.com/uhafner/autograding-github-action/issues/237